--- a/doc/tese/src/tex/02a-mokp-exato.tex
+++ b/doc/tese/src/tex/02a-mokp-exato.tex
@@ -8,7 +8,7 @@
   \input{alg/dp1.tex}
 \end{algorithm}
 
-\missing{Explicar que o algoritmo Bazgan considera um conceito generalizado
+\missing{Explicar que o algoritmo DP considera um conceito generalizado
 de dominância aplicado a cada iteração.}
 
 \missing{Dizer que a explicação do desenvolvimento do algoritmo será reproduzido
@@ -74,7 +74,7 @@ $k = 1, \ldots, n$ uma vez que cada relação $\rel_k^i$ explora característica
 específicas.
 
 \begin{algorithm}
-  \caption{Algoritmo de programação dinâmica utilizando múltiplas relações de dominância.}
+  \caption{Programação dinâmica utilizando múltiplas relações de dominância.}
   \label{alg:baz1}
   \input{alg/baz-alg1.tex}
 \end{algorithm}
