--- a/doc/tese/src/tex/main.tex
+++ b/doc/tese/src/tex/main.tex
@@ -26,7 +26,7 @@ brazil,				% o último idioma é o principal do documento
 \usepackage{amssymb}
 \usepackage{algpseudocode}
 %\usepackage{algorithm}
-\usepackage[ruled, vlined, linesnumbered]{algorithm2e}
+\usepackage[portuguese, ruled, vlined, linesnumbered]{algorithm2e}
 
 \SetKwInput{Kw}{input}
 
@@ -128,7 +128,7 @@ Federal do Espírito Santo.}
 \input{tex/03-kdtree.tex}
 
 % Experimentos
-\chapter{Experimentos}
+\chapter{Experimentos computacionais}
 \input{tex/04-experimentos.tex}
 
 % Conclusão
