--- a/doc/tese/src/tex/predefs.tex
+++ b/doc/tese/src/tex/predefs.tex
@@ -45,7 +45,7 @@
 
 %%% Other Papers Defs Auxiliars %%%
 %\newcommand{\dom}[2]{dom(#1, #2)}
-\newcommand{\dom}{\underline{\triangle}}
+\newcommand{\dom}{\underline{\Delta}}
 \renewcommand{\ord}{\mathcal{O}}
 %\newcommand{\domk}[2]{dom_k(#1, #2)}
 \newcommand{\til}[1]{{#1'}}
