--- a/doc/tese/src/tex/01-intro.tex
+++ b/doc/tese/src/tex/01-intro.tex
@@ -1,1 +1,22 @@
 Intro...
+
+\missingt{
+  Motivação não deve ser muito geral.
+  Falar mais da motivação.
+  Falar da complexidade do problema;
+}
+
+\missingt{
+Falar do problema e das estratégias de soluçã oescolhida.
+Contextualizar essas estratégias e situar minha contribuição;
+Deixar claro que minha proposta é o uso da estrutura,
+tanto no caso exato quanto no caso heurístico (nos devidos algoritmos).
+}
+
+\missingt{
+Colocar os objetivos.
+}
+
+\missingt{
+Explicar a metodologia de pesquisa empregada;
+}
