--- a/doc/tese/src/tex/02-mokp.tex
+++ b/doc/tese/src/tex/02-mokp.tex
@@ -1,4 +1,8 @@
 
+\missingt{
+Certificar-se que ter todas as definições sobre o problema que serão usadas no trabalho.
+}
+
 %%% Definição de problema multi-objectivo
 
 Em problemas reais é comum a existência de situações em que deseja-se otimizar
@@ -138,7 +142,7 @@ Formalmente a definição do problema é a seguinte:
 \end{align*}
 
 O \mokp{} é considerado um problema \nphard{} visto set uma generalização
-do bem conhecido problema da mochila $0-1$, para o qual $\np = 1$.
+do bem conhecido problema da mochila $0-1$, para o qual $\np = 1$~\cite{garey2002computers}.
 É consideravelmente difícil determinar o \paretoset para um \mokp{},
 especialmente para vários objetivos.
 Até mesmo para casos bi-objetivos, problemas pequenos podem se apresentar
