--- a/doc/tese/src/tex/02b-mokp-heuristico.tex
+++ b/doc/tese/src/tex/02b-mokp-heuristico.tex
@@ -1,5 +1,7 @@
 \section{Evolução estocástica por complexos}
 
+\missingt{Justificar o uso do SCE.}
+
 O Algoritmo de Evolução estocástica por complexos (EEC),
 \emph{Shuffled Complex Evolution} em inglês,
 é um algoritmo evolutivo populacional proposto por Duan~\cite{duan1992effective}
@@ -100,6 +102,8 @@ Após testar a inserção de todos os itens a solução contruida é retornada.
   \caption{Procedimento de cruzamento entre duas soluções do MOKP.}
   \label{alg:cross}
 \end{algorithm}
+
+\missing{Explicar como é o repair.}
 
 O procedimento de cruzamento (Figura~\ref{alg:cross}) recebe como entrada
 $s$ o pior indivíduo vindo do subcomplexo selecionado, $b$ um indivíduo com
