--- a/doc/tese/src/tex/03-kdtree.tex
+++ b/doc/tese/src/tex/03-kdtree.tex
@@ -1,5 +1,11 @@
 % Falar sobre a utilização de estrutura de dados.
 
+\missingt{
+  Apresentar os conceitos referentes as estruturas AVL-tree e k-d tree
+  (mesmo existentes na literatura);
+  Destacar a diferença de comportamento entre a elas.
+}
+
 \section{Verificação de dominância e a busca de faixa}
 
 Como dito anteriormente, solucionar um problema multi-objetivo significa
