--- a/doc/tese/src/tex/04-experimentos.tex
+++ b/doc/tese/src/tex/04-experimentos.tex
@@ -2,6 +2,12 @@ Vários experimentos computacionais foram realizados com o objetivo de veirficar
 a eficiência da indexação multi-dimensional, especialmente em instâncias com
 mais de duas dimensões.
 
+\missingt{
+  Explicar que são os mesmos tipo de instâncias, mas não o mesmo conjunto, pois
+  não foi disponibilizado pelos autores.\\
+  Dizer por que da métrica de comparação (hypervolume).\\
+}
+
 
 \missing{Introduzir comentário sobre as instâncias da Bazgan.}
 Quatro tipos de instâncias bi-objetivo são consideradas:
@@ -24,6 +30,10 @@ Quatro tipos de instâncias bi-objetivo são consideradas:
 \end{enumerate}
 onde $\in [a,b]$ denota uma distribuição uniforme aleatória no intervalo
 $[\,b]$.
+
+\missingt{
+  Esclarecer os critérios de generalização dos tipos de instância.
+}
 
 Para os experimentos com $3$-objetivo considerou-se
 a generalização introduzida por~\cite{bazgan2009}
@@ -53,3 +63,11 @@ Instâncias do tipo $B$ são consideradas mais fáceis enquanto instâncias do
 tipo $D$ são consideradas as mais difíceis.
 Para todas as instâncias, atribui-se $W=\frac{1}{2}\floor{\sum^n_{k=1} w^k}$.
 Para cada tipo e valor de $n$ dez instâncias foram geradas.
+
+
+\missingt{Descrever mais as tabelas e resultados.}
+
+\missingt{
+Dizer que a seleção dos parametros para o SCE sãos os recomendados pelo autor.\\
+Dizer também que varição dos parametros não produzir melhorias consistentes.
+}
