--- a/doc/tese/src/tex/abstract.tex
+++ b/doc/tese/src/tex/abstract.tex
@@ -12,8 +12,20 @@ solutions are proposed as an optimization, which yields considerable
 efficiency, especially on cases with more than two objectives.
 A series of computational experiments show the applicability of the proposal
 to several types of instances.
-
 \vspace{\onelineskip}
+
+% Falar brevemente sobre o MOKP
+% Falar brevemente sore a estratégia de indexação
+% Resumir os resultados obtidos
+
+\missingt{
+Observar as 5 regras:\\
+1. A general statement introduciong the broad reserach area of the particular topic being investigated;\\
+2. An explanation of the specific problem (difficulty, obstavle, challange) to be solved;\\
+3. A review of existing or standard solutions to this problem and their limitations;\\
+4. An outline of the proposed new solution;\\
+5. A summary of how the solution was evaluated and what the outcomes of the evaluation were.
+}
 
 \noindent
 \textbf{Keywords}:
