--- a/doc/tese/src/tex/folha-aprovacao.tex
+++ b/doc/tese/src/tex/folha-aprovacao.tex
@@ -16,12 +16,11 @@
 
    Work approved. \imprimirlocal, November 27, 2017:
 
-   \assinatura{\textbf{\imprimirorientador} \\ Advisor}
-   \assinatura{\textbf{Dr.ª Maria Claudia Silva Boeres} \\ Member}
-   \assinatura{\textbf{Dr. Arlindo Gomes de Alvarenga} \\ Guest}
-   \assinatura{\textbf{Dr.ª Simone de Lima Martins} \\ Guest}
-   %\assinatura{\textbf{Professor} \\ Convidado 3}
-   %\assinatura{\textbf{Professor} \\ Convidado 4}
+   \assinatura{\textbf{\imprimirorientador} \\ UFES - Orientador}
+   \assinatura{\textbf{Dr.ª Maria Claudia Silva Boeres} \\ Departamento de Informática - UFES}
+   \assinatura{\textbf{Dr. André Renato Sales Amaral} \\ Departamento de Informática - UFES}
+   \assinatura{\textbf{Dr. Alexandre Loureiros Rodrigues} \\ Departamento de Estatística - UFES}
+   \assinatura{\textbf{Dr.ª Simone de Lima Martins} \\ Instituto de Computação - UFF}
 
    \begin{center}
     \vspace*{0.5cm}
