--- a/doc/tese/src/tex/predefs.tex
+++ b/doc/tese/src/tex/predefs.tex
@@ -13,6 +13,11 @@
     {\scriptsize  #1}
   \end{framed}
 }
+\newcommand{\missingt}[1]{
+  \missing{$\blacksquare$
+    #1
+  }
+}
 \newcommand{\weight}[1]{w(\sol{#1})}
 \newcommand{\obj}[2]{f_{#1}(\sol{#2})}
 \newcommand{\bigweight}[1]{w\big(\sol{#1}\big)}
