--- a/doc/tese/src/tex/references.bib
+++ b/doc/tese/src/tex/references.bib
@@ -675,3 +675,11 @@ Data},
   year={2018, In~Preparation},
   organization={IEEE}
 }
+
+@book{garey2002computers,
+  title={Computers and intractability},
+  author={Garey, Michael R and Johnson, David S},
+  volume={29},
+  year={2002},
+  publisher={wh freeman New York}
+}
