--- a/doc/tese/src/tex/02a-mokp-exato.tex
+++ b/doc/tese/src/tex/02a-mokp-exato.tex
@@ -262,6 +262,8 @@ onde o pior rank do item $l$ nas $\np$ ordenações $\ord^j (j = 1, \ldots, \np)
 é calculado como $max_{i=1}^{\np}\{r_l^i\} + \frac{1}{\np n} \sum_{i = 1}^{\np} r_l^i$
 para distinguir itens com o mesmo rank máximo.
 
+\missing{Definir rank.}
+
 \missing{Dizer que o artigo original conclui atraves de testes qual é a melhor
 ordenação para ser utilizada nas iterações do algoritmo.}
 
