--- a/doc/tese/src/tex/02a-mokp-exato.tex
+++ b/doc/tese/src/tex/02a-mokp-exato.tex
@@ -261,6 +261,8 @@ piores ranks de itens nas $\np$ ordenações $\ord^j (j = 1, \ldots, \np)$,
 onde o pior rank do item $l$ nas $\np$ ordenações $\ord^j (j = 1, \ldots, \np)$
 é calculado como $max_{i=1}^{\np}\{r_l^i\} + \frac{1}{\np n} \sum_{i = 1}^{\np} r_l^i$
 para distinguir itens com o mesmo rank máximo.
+Sempre que necessário será usada a notação $\ord_{rev}$ para denotar ordem
+reversa de uma ordenação $\ord$.
 
 \missing{Definir rank.}
 
