--- a/doc/tese/src/tex/abstract.tex
+++ b/doc/tese/src/tex/abstract.tex
@@ -1,6 +1,18 @@
 
 
 \begin{resumo}
+Resumo...
+\vspace{\onelineskip}
+
+\noindent
+\textbf{Palavras Chave}:
+Multi-objective Knapsack Problem,
+Metaheuristic,
+Shuffled Complex Evolution,
+Multi-dimensional indexing
+\end{resumo}
+
+\begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
 Many real applications like project selection, capital budgeting and cutting stock involves optimizing multiple objectives that are usually conflicting and can be modelled as a multi-objective knapsack problem (MOKP).
 Unlike the single-objective case, the MOKP is considered a NP-Hard problem with
@@ -12,7 +24,15 @@ solutions are proposed as an optimization, which yields considerable
 efficiency, especially on cases with more than two objectives.
 A series of computational experiments show the applicability of the proposal
 to several types of instances.
-\vspace{\onelineskip}
+
+\noindent
+\textbf{Keywords}:
+Multi-objective Knapsack Problem,
+Metaheuristic,
+Shuffled Complex Evolution,
+Multi-dimensional indexing
+\end{otherlanguage*}
+\end{resumo}
 
 % Falar brevemente sobre o MOKP
 % Falar brevemente sore a estratégia de indexação
@@ -27,11 +47,3 @@ Observar as 5 regras:\\
 5. A summary of how the solution was evaluated and what the outcomes of the evaluation were.
 }
 
-\noindent
-\textbf{Keywords}:
-Multi-objective Knapsack Problem,
-Metaheuristic,
-Shuffled Complex Evolution,
-Multi-dimensional indexing
-\end{otherlanguage*}
-\end{resumo}
