--- a/doc/tese/src/tex/folha-aprovacao.tex
+++ b/doc/tese/src/tex/folha-aprovacao.tex
@@ -1,5 +1,4 @@
 \begin{folhadeaprovacao}
-
   \begin{center}
     {\ABNTEXchapterfont\large\imprimirautor}
 
@@ -8,26 +7,23 @@
     \vspace*{\fill}
 
     \hspace{.45\textwidth}
-    \begin{minipage}{.5\textwidth}
+    \begin{minipage}{.52\textwidth}
         \imprimirpreambulo
     \end{minipage}%
     \vspace*{\fill}
    \end{center}
 
-   Work approved. \imprimirlocal, November 27, 2017:
-
-   \assinatura{\textbf{\imprimirorientador} \\ UFES - Orientador}
+   Trabalho aprovado.\\ \phantom{aaa}Vitória, \imprimirdata:
+   \assinatura{\textbf{\imprimirorientador} \\ Departamento de Informática - UFES \\ Orientador}
    \assinatura{\textbf{Dr.ª Maria Claudia Silva Boeres} \\ Departamento de Informática - UFES}
    \assinatura{\textbf{Dr. André Renato Sales Amaral} \\ Departamento de Informática - UFES}
    \assinatura{\textbf{Dr. Alexandre Loureiros Rodrigues} \\ Departamento de Estatística - UFES}
    \assinatura{\textbf{Dr.ª Simone de Lima Martins} \\ Instituto de Computação - UFF}
-
-   \begin{center}
-    \vspace*{0.5cm}
-    {\large\imprimirlocal}
-    \par
-    {\large\imprimirdata}
-    \vspace*{1cm}
-  \end{center}
-
+%   \begin{center}
+%    \vspace*{1.5cm}
+%    {\large\imprimirlocal}
+%    \par
+%    {\large\imprimirdata}
+%    \vspace*{1cm}
+%  \end{center}
 \end{folhadeaprovacao}
