--- a/doc/tese/src/references.bib
+++ b/doc/tese/src/references.bib
@@ -742,7 +742,9 @@ Data},
    TITLE   = {ND-Tree-based update: a Fast Algorithm for the Dynamic Non-Dominance Problem},
    YEAR    = {2017},
    archivePrefix = "arXiv",
-   eprint = {1603.04798}
+   url = {https://arxiv.org/abs/1603.04798},
+   eprint = {1603.04798},
+   urldate = {2018-06-30}
 }
 
 % Exemplos de uso de estrutura de dados para reduzir tempo computacional
